[package]
name = "pubster"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
tokio = {version="1.45.0", features = ["macros", "rt-multi-thread"]}
tokio-test = "0.4.4"
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"


[[bin]]
name = "client"
path = "src/client/bin/main.rs"
