[package]
name = "pubster"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dotenvy = "0.15"
prost = "0.13.5"
prost-derive = "0.13.5"
tokio = {version="1.45.0", features = ["macros", "rt-multi-thread", "signal", "time"]}
tokio-stream = {version="0.1.17", features = ["sync"] }
tokio-test = "0.4.4"
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"


[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[[bin]]
name = "simulator"
path = "src/simulator/bin/main.rs"
